--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -318,6 +318,19 @@
   url       = {https://search.proquest.com/openview/a0e43746a2242fe6060610b3dbdb2da6/1},
 }
 
+@Article{Adams2019,
+  author    = {Adams, D. and Beckelhymer, D. and Marr, A.},
+  title     = {Choose Your Own Adventure: An Analysis of Interactive Gamebooks Using Graph Theory},
+  journal   = {Journal of Humanistic Mathematics},
+  year      = {2019},
+  volume    = {9},
+  number    = {2},
+  pages     = {44-59},
+  doi       = {10.5642/jhummath.201902.05},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+}
+
 @InCollection{Addison2001,
   author    = {Addison, J.},
   title     = {Cato},
@@ -1727,7 +1740,7 @@
 
 @Article{Amancio2015b,
   author    = {Amancio, D. R.},
-  title     = {Network analysis of named entity interactions in written texts},
+  title     = {Network analysis of named entity co-occurrences in written texts},
   journal   = {Europhysics Letters},
   year      = {2015},
   volume    = {5},
@@ -23629,6 +23642,20 @@
   doi       = {10.1080/19434471003597415},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@InProceedings{Hand2008,
+  author    = {Hand, S. and Varan, D.},
+  title     = {Interactive Narratives: Exploring the Links between Empathy, Interactivity and Structure},
+  booktitle = {European Conference on Interactive Television},
+  year      = {2008},
+  volume    = {5066},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {11-19},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-540-69478-6_2},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @Article{Handcock2008,
@@ -51596,16 +51623,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icdar.2009.194},
   owner     = {Vincent},
   timestamp = {2022.07.09},
-}
-
-@InProceedings{Schult2008,
-  author    = {Schult, D. A.},
-  title     = {Exploring network structure, dynamics, and function using NetworkX},
-  booktitle = {7th Python in Science Conference},
-  year      = {2008},
-  owner     = {Vincent},
-  timestamp = {2020.12.14},
-  url       = {https://www.osti.gov/biblio/960616},
 }
 
 @InCollection{Schweickert2007,
