--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -553,6 +553,17 @@
   timestamp   = {2020.03.15},
 }
 
+@InProceedings{Agarwal2019,
+  author    = {Agarwal, L. and Thakral, K. and Bhatt, G. and Mittal, A.},
+  title     = {Authorship Clustering using TF-IDF weighted Word-Embeddings},
+  booktitle = {11th Forum for Information Retrieval Evaluation},
+  year      = {2019},
+  pages     = {24-29},
+  doi       = {10.1145/3368567.3368572},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+}
+
 @Article{Agerri2016,
   author    = {Agerri, R. and Rigau, G.},
   title     = {Robust multilingual Named Entity Recognition with shallow semi-supervised features},
@@ -6278,6 +6289,22 @@
   doi       = {10.1109/cvpr.2008.4587598},
   owner     = {Vincent},
   timestamp = {2023.11.28},
+}
+
+@Article{Bojanowski_2017,
+  author    = {Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  title     = {Enriching Word Vectors with Subword Information},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2017},
+  volume    = {5},
+  pages     = {135–146},
+  month     = dec,
+  issn      = {2307-387X},
+  doi       = {10.1162/tacl_a_00051},
+  owner     = {Vincent},
+  publisher = {MIT Press - Journals},
+  timestamp = {2024.01.02},
+  url       = {http://dx.doi.org/10.1162/tacl_a_00051},
 }
 
 @InProceedings{Bojanowski2013,
@@ -61770,6 +61797,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s12650-013-0163-4},
   owner     = {Vincent},
   timestamp = {2022.05.14},
+}
+
+@InProceedings{Yamada2020,
+  author    = {Yamada, I. and Asai, A. and Sakuma, J. and Shindo, H. and Takeda, H. and Takefuji, Y. and Matsumoto, Y.},
+  title     = {{Wikipedia2Vec}: An Efficient Toolkit for Learning and Visualizing the Embeddings of Words and Entities from Wikipedia},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
+  year      = {2020},
+  pages     = {23-30},
+  doi       = {10.18653/v1/2020.emnlp-demos.4},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @TechReport{Yanagawa2007,
