--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -915,6 +915,17 @@
   timestamp = {2023.04.13},
 }
 
+@InProceedings{Akbik2018,
+  author    = {Akbik, A. and Blythe, D. and Vollgraf, R.},
+  title     = {Contextual String Embeddings for Sequence Labeling},
+  booktitle = {27th International Conference on Computational Linguistics},
+  year      = {2018},
+  pages     = {1638-1649},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://aclanthology.org/C18-1139/},
+}
+
 @Article{Akiki2018,
   author    = {Akiki, T. J. and Averill, C. L. and Wrocklage, K. M. and Scott, J. C. and Averill, L. A. and Schweinsburg, B. and Alexander-Bloch, A. and Martini, B. and Southwick, S. M. and Krystal, J. H. and Abdallah, C. G.},
   title     = {Default mode network abnormalities in posttraumatic stress disorder: A novel network-restricted topology approach},
@@ -2535,6 +2546,16 @@
   doi       = {10.1017/CBO9780511804090},
   owner     = {Vincent},
   timestamp = {2022.07.07},
+}
+
+@InProceedings{Arora2017,
+  author    = {Arora, S. and Liang, Y. and Ma, T.},
+  title     = {A simple but tough-to-beat baseline for sentence embeddings},
+  booktitle = {International conference on learning representations},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://openreview.net/forum?id=SyK00v5xx},
 }
 
 @Book{Arquilla1996,
@@ -6289,22 +6310,6 @@
   doi       = {10.1109/cvpr.2008.4587598},
   owner     = {Vincent},
   timestamp = {2023.11.28},
-}
-
-@Article{Bojanowski_2017,
-  author    = {Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
-  title     = {Enriching Word Vectors with Subword Information},
-  journal   = {Transactions of the Association for Computational Linguistics},
-  year      = {2017},
-  volume    = {5},
-  pages     = {135–146},
-  month     = dec,
-  issn      = {2307-387X},
-  doi       = {10.1162/tacl_a_00051},
-  owner     = {Vincent},
-  publisher = {MIT Press - Journals},
-  timestamp = {2024.01.02},
-  url       = {http://dx.doi.org/10.1162/tacl_a_00051},
 }
 
 @InProceedings{Bojanowski2013,
@@ -25006,6 +25011,16 @@
   url       = {https://litlab.stanford.edu/LiteraryLabPamphlet13.pdf},
 }
 
+@InProceedings{Heuser2017,
+  author    = {Heuser, R. J.},
+  title     = {Word vectors in the eighteenth century},
+  booktitle = {Digital Humanities Conference},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://dh2017.adho.org/abstracts/582/582.pdf},
+}
+
 @InProceedings{Hewitt2019,
   author    = {Hewitt, J. and Manning, C. D.},
   title     = {A Structural Probe for Finding Syntax in Word Representations},
@@ -26941,6 +26956,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icc.2011.5963147},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Incitti2023,
+  author    = {Incitti, F. and Urli, F. and Snidaro, L.},
+  title     = {Beyond word embeddings: A survey},
+  journal   = {Information Fusion},
+  year      = {2023},
+  volume    = {89},
+  pages     = {418–436},
+  doi       = {10.1016/j.inffus.2022.08.024},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @Book{Inden2005,
@@ -29775,6 +29802,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://d1wqtxts1xzle7.cloudfront.net/49315125/Jane_Austen_in_Vector_Space-libre.pdf},
 }
 
+@Article{Kerr2017,
+  author    = {Kerr, S. J.},
+  title     = {When Computer Science Met Austen and Edgeworth},
+  journal   = {NPPSH Reflections},
+  year      = {2017},
+  volume    = {1},
+  pages     = {38-52},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://mural.maynoothuniversity.ie/8298/},
+}
+
 @Article{Keselman2004,
   author    = {Keselman, H. J. and Othman, A. R. and Wilcox, R. R. and Fradette, K.},
   title     = {The New and Improved Two-Sample t Test},
@@ -32255,6 +32294,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@InProceedings{Kusner2015,
+  author    = {Kusner, M. and Sun, Y. and Kolkin, N. and Weinberger, K.},
+  title     = {From Word Embeddings To Document Distances},
+  booktitle = {32nd International Conference on Machine Learning},
+  year      = {2015},
+  volume    = {37},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {957-966},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://proceedings.mlr.press/v37/kusnerb15.html},
+}
+
 @Article{Kuttler2003,
   author    = {Kuttler, C. and Blossey, R.},
   title     = {Individualistic networks and networking individuals in Tango Argentino},
@@ -33268,6 +33320,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0956797611417007},
   owner     = {Vincent},
   timestamp = {2022.08.31},
+}
+
+@Book{Lebart2019,
+  title     = {Analyse des données textuelles},
+  publisher = {Presses de l’Université du Québec},
+  year      = {2019},
+  author    = {Lebart, L. and Pincemin, B. and Poudat, C.},
+  volume    = {11},
+  series    = {Mesure et évaluation},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://www.puq.ca/catalogue/livres/analyse-des-donnees-textuelles-3651.html},
 }
 
 @Article{Ledger1994,
@@ -34795,6 +34859,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/iccv.2017.289},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@InCollection{Li2017f,
+  author    = {Li, Y. and Yang, T.},
+  title     = {Word Embedding for Understanding Natural Language: A Survey},
+  booktitle = {Guide to Big Data Applications},
+  publisher = {Springer},
+  year      = {2017},
+  pages     = {83-104},
+  doi       = {10.1007/978-3-319-53817-4_4},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @Article{Li2017p,
@@ -43256,6 +43332,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.06.28},
 }
 
+@InCollection{Novakova2019,
+  author    = {Novakova, I. and Siepmann, D.},
+  title     = {Literary Style, Corpus Stylistic, and Lexico-Grammatical Narrative Patterns: Toward the Concept of Literary Motifs},
+  booktitle = {Phraseology and Style in Subgenres of the Novel},
+  publisher = {Springer},
+  year      = {2019},
+  pages     = {1-15},
+  doi       = {10.1007/978-3-030-23744-8_1},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+}
+
 @Article{NovaParulian2023,
   author    = {Nova Parulian, N. and Dubnicek, R. and Evans, D. J. and Hu, Y. and Layne-Worthey, G. and Downie, J. S. and Heaton, R. and Lu, K. and Orr, R. I. and Magni, I. and Walsh, J. A.},
   title     = {Tuning Out the Noise: Benchmarking Entity Extraction for Digitized Native American Literature},
@@ -51013,6 +51101,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=1599081.1599179},
+}
+
+@Book{Schmid2010,
+  title     = {Narratology: an introduction},
+  publisher = {Walter de Gruyter},
+  year      = {2010},
+  author    = {Schmid, W.},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://books.google.fr/books/?id=Do6e5MZuADcC},
 }
 
 @Book{Schmidt2011,
