--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3366,6 +3366,16 @@
   timestamp = {2019.04.10},
 }
 
+@Book{Baldry1971,
+  title     = {The Greek Tragic Theatre},
+  publisher = {Chatto \& Windus},
+  year      = {1971},
+  author    = {Baldry, H. C.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://books.google.fr/books/?id=fKRfAAAAMAAJ},
+}
+
 @PhdThesis{Baldwin1947,
   author    = {Baldwin, T. W.},
   title     = {Shakspere's Five-Act Structure: Shakspere's Early Plays on the Background of Renaissance Theories of Five-act Structure from 1470},
@@ -3569,6 +3579,16 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://trove.nla.gov.au/work/25235617},
+}
+
+@Book{Bang2022,
+  title     = {Script Analysis: Deconstructing Screenplay Fundamentals},
+  publisher = {Routledge},
+  year      = {2022},
+  author    = {Bang, J.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.routledge.com/Script-Analysis-Deconstructing-Screenplay-Fundamentals/Bang/p/book/9780367687397},
 }
 
 @Article{Bank2014,
@@ -4683,6 +4703,29 @@
   doi       = {10.1145/354401.354782},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@InCollection{Bednarek2017,
+  author    = {Bednarek, M.},
+  title     = {The role of dialogue in fiction},
+  booktitle = {Pragmatics of Fiction},
+  publisher = {De Gruyter},
+  year      = {2017},
+  chapter   = {5},
+  pages     = {129-158},
+  doi       = {10.1515/9783110431094-005},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
+@Book{Bednarek2018,
+  title     = {Language and Television Series: A Linguistic Approach to TV Dialogue},
+  publisher = {Cambridge University Press},
+  year      = {2018},
+  author    = {Bednarek, M.},
+  doi       = {10.1017/9781108559553},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @InProceedings{Behera2016a,
@@ -7421,6 +7464,19 @@
   timestamp = {2021.09.21},
 }
 
+@Article{Braga1970,
+  author    = {Braga, P.},
+  title     = {How to apply the multi-strand narrative of American TV shows in a British series: the Downton Abbey’s case},
+  journal   = {Communication \& Society},
+  year      = {1970},
+  volume    = {29},
+  number    = {2},
+  pages     = {1–16},
+  doi       = {10.15581/003.29.35920},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @Article{Braga2020,
   author    = {Braga, P.},
   title     = {The Italian Storytelling Approach to TV Seriality Compared to the US Method. A Case Study},
@@ -7656,6 +7712,18 @@
   doi       = {10.1002/job.1890},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Branea2013,
+  author    = {Branea, S. and Guguianu, A.},
+  title     = {Audience's Interest for Health Problems and Human Relations: Friendship and Love in {TV} Medical Dramas},
+  journal   = {International Journal of Communication and Health},
+  year      = {2013},
+  volume    = {1},
+  pages     = {46-52},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://d1wqtxts1xzle7.cloudfront.net/84197718/Friendship-and-Love-in-TV-Medical-Dramas-libre.pdf},
 }
 
 @Book{Branigan2013,
@@ -14239,6 +14307,18 @@
   timestamp = {2019.03.30},
 }
 
+@InCollection{Demirci2021,
+  author    = {Demirci, M. and Ana, U. and Cangul, I. N.},
+  title     = {Properties of Characteristic Polynomials of Oriented Graphs},
+  booktitle = {New Trends in Applied Analysis and Computational Mathematics},
+  publisher = {Springer},
+  year      = {2021},
+  pages     = {59-65},
+  doi       = {10.1007/978-981-16-1402-6_5},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @InProceedings{Demirkesen2008,
   author    = {Demirkesen, C. and Cherifi, H.},
   title     = {A Comparison of Multiclass {SVM} Methods for Real World Natural Scenes},
@@ -16286,6 +16366,16 @@
   url       = {http://www.cambridge.org/us/academic/subjects/computer-science/algorithmics-complexity-computer-algebra-and-computational-g/networks-crowds-and-markets-reasoning-about-highly-connected-world},
 }
 
+@Book{Easterling1985,
+  title     = {The Cambridge History of Classical Literature},
+  publisher = {Cambridge University Press},
+  year      = {1985},
+  author    = {Easterling, P. E. and Knox, B. M. W.},
+  doi       = {10.1017/chol9780521210423},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @Article{Ebbesen1976,
   author    = {Ebbesen, E. B. and Kjos, G. L. and Konečni, V. J.},
   title     = {Spatial ecology: Its effects on the choice of friends and enemies},
@@ -16946,6 +17036,18 @@
   doi       = {10.1007/3-540-45848-4_57},
   owner     = {Vincent},
   timestamp = {2019.08.19},
+}
+
+@Article{Else1945,
+  author    = {Else, G. F.},
+  title     = {The Case of the Third Actor},
+  journal   = {Transactions and Proceedings of the American Philological Association},
+  year      = {1945},
+  volume    = {76},
+  pages     = {1-10},
+  doi       = {10.2307/283321},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @Book{Else1957,
@@ -22889,6 +22991,19 @@
   timestamp = {2021.07.02},
 }
 
+@Article{Grohe2020a,
+  author    = {Grohe, M. and Schweitzer, P.},
+  title     = {The graph isomorphism problem},
+  journal   = {Communications of the ACM},
+  year      = {2020},
+  volume    = {63},
+  number    = {11},
+  pages     = {128-134},
+  doi       = {10.1145/3372123},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @InCollection{Gronemann2016,
   author    = {Gronemann, M. and Jünger, M. and Liers, F. and Mambelli, F.},
   title     = {Crossing Minimization in Storyline Visualization},
@@ -23647,6 +23762,17 @@
   url       = {https://aclweb.org/anthology/papers/W/W04/W04-3217/},
 }
 
+@PhdThesis{Halvatzis2011,
+  author    = {Halvatzis, S.},
+  title     = {Multiform and Multistrand Narrative Structures in Hollywood Cinema},
+  school    = {University of Southern Queensland},
+  year      = {2011},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://research.usq.edu.au/item/q12vy/multiform-and-multistrand-narrative-structures-in-hollywood-cinema},
+}
+
 @Article{Ham2009,
   author    = {van Ham, F. and Wattenberg, M. and Viegas, F. B.},
   title     = {Mapping Text with Phrase Nets},
@@ -24141,6 +24267,19 @@
   owner       = {Vincent},
   timestamp   = {2019.08.19},
   url         = {http://www.idiosophy.com/wp-content/uploads/2017/07/harary-norman.pdf},
+}
+
+@Article{Harary1957a,
+  author    = {Harary, F.},
+  title     = {The number of oriented graphs},
+  journal   = {Michigan Mathematical Journal},
+  year      = {1957},
+  volume    = {4},
+  number    = {3},
+  pages     = {221-224},
+  doi       = {10.1307/mmj/1028997952},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @Article{Harary1963,
@@ -26448,6 +26587,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.11.30},
 }
 
+@Article{https://doi.org/10.13125/2039-6597/4,
+  author    = {Innocenti, V. and Pescatore, G.},
+  title     = {Changing Series: Narrative Models and the Role of the Viewer in Contemporary Television Seriality},
+  journal   = {Between},
+  year      = {2015},
+  volume    = {4},
+  pages     = {8},
+  doi       = {10.13125/2039-6597/4},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @InProceedings{Hu_2012,
   author    = {Hu, M. and Liu, S. and Wei, F. and Wu, Y. and Stasko, J. and Ma, K.-L.},
   title     = {Breaking news on {Twitter}},
@@ -27222,6 +27373,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1057/9781403981240},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@InCollection{Innocenti2018,
+  author    = {Innocenti, V. and Pescatore, G.},
+  title     = {The Evolution of Characters in TV Series: Morphology, Selection, and Remarkable Cases in Narrative Ecosystems},
+  booktitle = {Reading Contemporary Serial Television Universes},
+  publisher = {Routledge},
+  year      = {2018},
+  pages     = {93-110},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.taylorfrancis.com/chapters/edit/10.4324/9781315114668-7/},
 }
 
 @InCollection{Inoue2018,
@@ -38931,6 +39094,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.25},
 }
 
+@Article{McAnea2001,
+  author    = {McAnea, T.},
+  title     = {A brief history of medical drama},
+  journal   = {British Medical Journal},
+  year      = {2001},
+  volume    = {322},
+  number    = {Suppl S5},
+  pages     = {0105157},
+  doi       = {10.1136/sbmj.0105157},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @InProceedings{McAuley2012,
   author    = {McAuley, J. and Leskovec, J.},
   title     = {Learning to discover social circles in ego networks},
@@ -39240,6 +39416,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://press.princeton.edu/books/paperback/9780691015187/the-textual-condition},
+}
+
+@Article{McGann2015,
+  author    = {McGann, S.},
+  title     = {From how to who: accuracy and authenticity in the portrayal of the medic in {TV} drama},
+  journal   = {Journal of the Royal Society of Medicine},
+  year      = {2015},
+  volume    = {108},
+  number    = {4},
+  pages     = {123–126},
+  doi       = {10.1177/0141076815579584},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @Book{McGettigan2013,
@@ -45500,16 +45689,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Peng2024,
-  author    = {Peng , D.},
+  author    = {Peng, D.},
   title     = {The {M}arvel {U}niverse's Character Partnerships Reflecting on Cultural Diversity and Marketing Strategy},
   journal   = {Academic Journal of Humanities \& Social Sciences},
   year      = {2024},
   volume    = {7},
   number    = {1},
   pages     = {80-88},
+  doi       = {10.25236/AJHSS.2024.070113},
   owner     = {Vincent},
   timestamp = {2024.02.08},
-  url       = {https://francis-press.com/papers/14443},
 }
 
 @Book{Pennebaker2001,
@@ -49369,6 +49558,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.06.28},
 }
 
+@Article{Rocchi2019,
+  author    = {Rocchi, M.},
+  title     = {History, Analysis and Anthropology of Medical Dramas: A Literature Review},
+  journal   = {Cinergie},
+  year      = {2019},
+  volume    = {8},
+  number    = {15},
+  pages     = {69-84},
+  doi       = {10.6092/ISSN.2280-9481/8982},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
+@Article{Rocchi2022,
+  author    = {Rocchi, M. and Pescatore, G.},
+  title     = {Modeling narrative features in TV series: coding and clustering analysis},
+  journal   = {Humanities and Social Sciences Communications},
+  year      = {2022},
+  volume    = {9},
+  pages     = {333},
+  doi       = {10.1057/s41599-022-01352-9},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+}
+
 @TechReport{Rochat2009,
   author      = {Rochat, Y.},
   title       = {Closeness centrality extended to unconnected graphs : the harmonic centrality index},
@@ -52384,6 +52598,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {http://cup.columbia.edu/book/between-men/9780231176293},
+}
+
+@Book{Seeskin1987,
+  title     = {Dialogue and Discovery: A Study in Socratic Method},
+  publisher = {Suny Press},
+  year      = {1987},
+  author    = {Seeskin, K.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://books.google.fr/books/?id=F0Ol9KbWROoC},
 }
 
 @Book{Segal1986,
@@ -57101,6 +57325,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://store.doverpublications.com/0486671356.html},
 }
 
+@Article{Thompson1997,
+  author    = {Thompson, R. J.},
+  title     = {Television's Second Golden Age: From Hill Street Blues to ER},
+  journal   = {Syracuse University Press},
+  year      = {1997},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://books.google.fr/books/?id=dsLLundkKF8C},
+}
+
 @Book{Thompson1999,
   title     = {Storytelling in the New Hollywood: Understanding Classical Narrative Technique},
   publisher = {Harvard University Press},
@@ -61038,6 +61272,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/access.2020.2986055},
   owner     = {Vincent},
   timestamp = {2023.03.17},
+}
+
+@Article{Wicclair2008,
+  author    = {Wicclair, M. R.},
+  title     = {The Pedagogical Value ofHouse, M.D. - Can a Fictional Unethical Physician Be Used to Teach Ethics?},
+  journal   = {American Journal of Bioethics},
+  year      = {2008},
+  volume    = {8},
+  number    = {12},
+  pages     = {16–17},
+  doi       = {10.1080/15265160802478503},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @Book{Wickham2009,
