--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -8213,6 +8213,16 @@
   timestamp = {2020.07.21},
 }
 
+@Book{Brown2005,
+  title     = {Black superheroes, Milestone comics, and their fans},
+  publisher = {University Press Of Mississippi},
+  year      = {2005},
+  author    = {Brown, J. A.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.jstor.org/stable/j.ctt2tv7pv},
+}
+
 @InProceedings{Brown2012,
   author    = {Brown, E. T. and Liu, J. and Brodley, C. E. and Chang, R.},
   title     = {Dis-function: Learning distance functions interactively},
@@ -8232,6 +8242,16 @@
   owner     = {Vincent},
   timestamp = {2022.06.29},
   url       = {https://papers.nips.cc/paper/2020/hash/1457c0d6bfcb4967418bfb8ac142f64a-Abstract.html},
+}
+
+@Book{Brown2021,
+  title     = {Panthers, Hulks and Ironhearts : Marvel, diversity, and the twenty-first-century superhero},
+  publisher = {Rutgers University Press},
+  year      = {2021},
+  author    = {Brown, J. A.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.rutgersuniversitypress.org/panthers-hulks-and-ironhearts/9781978809215/},
 }
 
 @Book{Brownrigg2001,
@@ -12600,6 +12620,16 @@
   doi       = {10.1016/j.annepidem.2010.02.011},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Book{Costello2009,
+  title     = {Secret identity crisis : comic books and the unmasking of Cold War America},
+  publisher = {Continuum},
+  year      = {2009},
+  author    = {Costello, M. J.},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://books.google.fr/books/?id=tsCoAwAAQBAJ},
 }
 
 @Article{CotillaSanchez2012,
@@ -17865,6 +17895,19 @@
   doi       = {10.1073/pnas.1109521108},
   owner     = {Vincent},
   timestamp = {2014.11.20},
+}
+
+@Article{Facciani2015,
+  author    = {Facciani, M. and Warren, P. and Vendemia, J.},
+  title     = {A Content-Analysis of Race, Gender, and Class in American Comic Books},
+  journal   = {Race, Gender \& Class},
+  year      = {2015},
+  volume    = {22},
+  number    = {3-4},
+  pages     = {216-226},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.jstor.org/stable/26505357},
 }
 
 @InProceedings{Fader2011,
@@ -53326,6 +53369,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@Article{Shi2021b,
+  author    = {Shi, C. and Yu, X. and Ren, Z.},
+  title     = {How the Avengers Assembled? Analysis of Marvel Hero Social Network},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {physics.soc-ph},
+  pages     = {2109.12900},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://arxiv.org/abs/2109.12900},
+}
+
 @Article{Shimbel1953,
   author    = {Shimbel, A.},
   title     = {Structural parameters of communication networks},
@@ -53830,6 +53885,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.routledge.com/Television-And-Everyday-Life/Silverstone/p/book/9780415016476},
 }
 
+@Article{Silvio1995,
+  author    = {Silvio, C.},
+  title     = {Postmodern Narrative, the Marvel Universe, and the Reader. Studies in Popular Culture},
+  journal   = {Studies in Popular Culture},
+  year      = {1995},
+  volume    = {17},
+  number    = {2},
+  pages     = {39-50},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
+  url       = {https://www.jstor.org/stable/23413701},
+}
+
 @Electronic{Simchoni2017,
   author       = {Simchoni, G.},
   month        = {06},
@@ -53944,6 +54012,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.01.01},
   url       = {https://dlsanthology.mla.hcommons.org/information-visualizationfor-humanities-scholars/},
+}
+
+@Article{Singer2002,
+  author    = {Singer, Marc},
+  title     = {``Black Skins'' and White Masks: Comic Books and the Secret of Race},
+  journal   = {African American Review},
+  year      = {2002},
+  volume    = {36},
+  number    = {1},
+  pages     = {107},
+  doi       = {10.2307/2903369},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @Article{Singh2012,
@@ -63263,6 +63344,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3025453.3025720},
   owner     = {Vincent},
   timestamp = {2022.07.02},
+}
+
+@Book{Yockey2017,
+  title     = {Make Ours Marvel: Media Convergence and a Comics Universe},
+  publisher = {University of Texas Press},
+  year      = {2017},
+  author    = {Yockey, M.},
+  doi       = {10.7560/312490},
+  owner     = {Vincent},
+  timestamp = {2024.04.21},
 }
 
 @InProceedings{Yoder2021,
